# dd_merge

./: .gitignore  CONSTITUTION.md  Cargo.toml  README.md
.dd-dm/: config.toml
.dd-dm/cache/: AGENTS.md  CLAUDE.md  CONSTITUTION.md  __init__.py
.dd-dm/cache/modules/: GIT_ATOMIC_COMMITS.md  GIT_CONVENTIONAL_COMMITS.md  __init__.py
.github/workflows/: ci.yml
assets/: Info.plist
crates/dd_ai/: Cargo.toml
crates/dd_ai/src/: lib.rs
crates/dd_core/: Cargo.toml
crates/dd_core/src/: lib.rs  session.rs  state.rs
crates/dd_core/tests/: integration.rs
crates/dd_git/: Cargo.toml
crates/dd_git/src/: commit.rs  diff.rs  lib.rs  repository.rs  types.rs
crates/dd_git/src/diff/: inline.rs  mod.rs  parse.rs  split.rs
crates/dd_git/tests/: integration.rs
crates/dd_merge/: Cargo.toml
crates/dd_merge/src/: main.rs
crates/dd_ui/: Cargo.toml
crates/dd_ui/src/: app_view.rs  commit_list.rs  diff_view.rs  lib.rs  repo_view.rs  sidebar.rs  syntax.rs  tab_bar.rs  test_helpers.rs  theme.rs
docs/: research.md  specifications.md
scripts/: bundle-macos.sh
