[workspace]
members = [
    "crates/dd_merge",
    "crates/dd_core",
    "crates/dd_git",
    "crates/dd_ui",
    "crates/dd_ai",
]
resolver = "2"

[workspace.dependencies]
gpui = { version = "0.2", features = ["runtime_shaders"] }
gpui-component = "0.5"
gpui-component-assets = "0.5"
gix = { version = "0.70", default-features = false, features = ["status", "revision", "index", "dirwalk", "attributes"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
dirs = "6"
chrono = "0.4"
tempfile = "3"
similar = "2"
