[package]
name = "dd_ui"
version = "0.1.0"
edition = "2021"

[dependencies]
gpui = { workspace = true }
gpui-component = { workspace = true }
gpui-component-assets = { workspace = true }
dd_core = { path = "../dd_core" }
dd_git = { path = "../dd_git" }
anyhow = { workspace = true }
chrono = { workspace = true }
syntect = { workspace = true }

[dev-dependencies]
gpui = { workspace = true, features = ["test-support"] }
tempfile = { workspace = true }
